# PROJECT-PRESENCE

./: .env.example  .gitignore  DEPLOY.md  README.md  SENTINEL_ARCHITECTURE.md  pyproject.toml  sentinel_config.example.json  sentinel_node_architecture.md  sentinel_platform_spec.md
bridge/: csi_bridge.py  csi_bridge.service  requirements.txt
data/: .gitkeep
docs/: build-log.md  chat-32-changelog.md  chat-33-changelog.md  hardware.md  lidar_setup_guide.md  sensors.md
scripts/: deploy_all.ps1  deploy_all.sh  deploy_chat21.sh  deploy_chat25.sh  deploy_restart.sh  deploy_services.sh  diagnose_thekeeper.sh  lidar_calibrate.py  ota_flash_node01.sh  sentinel-watchdog.service  tc001_y16_probe.py  test_emrf_fix.sh
sentinel/: __init__.py  av_principles.py  config.py  room_config.json  topics.py  watchdog.py
sentinel/adapters/: __init__.py  __main__.py  camera_adapter.py  csi_adapter.py  node_adapter.py
sentinel/brain/: __init__.py  __main__.py  narrative.py  service.py
sentinel/dashboard/: __init__.py  __main__.py  index.html  service.py
sentinel/docs/: ntp_time_sync.md
sentinel/fusion/: __init__.py  __main__.py  assertion_producers.py  correlation.py  service.py  test_correlation.py  validation.py
sentinel/intelligence/: __init__.py  (+1 more)
sentinel_node/: acoustic.h  bme688.h  config.example.h  device_scanner.h  ld2450.h  platformio.ini  sentinel_monitor.py  sentinel_net.h  sentinel_node.ino  ydlidar.h
systemd/: sentinel-brain.service  sentinel-camera-adapter.service  sentinel-dashboard.service  sentinel-fusion.service  sentinel-node-adapter.service
(+8 files in other folders)
