[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Presence — privacy-first home intelligence"
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt>=1.6,<3",
    "numpy>=1.21",
]

[project.optional-dependencies]
dashboard = ["uvicorn[standard]>=0.20", "starlette>=0.27"]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["sentinel*"]
